<resources>
    <string name="app_name">Story Seeker</string>
    <string name="signup1">Haven"'"t registered yet?</string>
    <string name="signup">Signup</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="pass1">Password:</string>
    <string name="name">User Name:</string>
    <string name="f_name">First Name:</string>
    <string name="l_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="con_pass">Confirm Password:</string>
    <string name="review">Review</string>
    <string name="bookname">Book Name</string>
    <string name="rate">Rate</string>
    <string name="comment">Comments</string>
    <string name="emaileg">example@xyz.com</string>
</resources>
